--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="farshadvaghari@gmail.com">
 
     <link rel="stylesheet" href="styles.css"/>
-    <link rel="shortcut icon" href="DCIcon.png" type="image/png">
+    <link rel="shortcut icon" href="digital-clock-icon.png" type="image/png">
 
     <title>Digital-Clock</title>
 </head>
