Added a div with "clock" class name as a container and added a div with "display" class name to show time

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="description" content="This is a website for Mercedes Benz dealership!!">
@@ -11,9 +14,19 @@
     <link rel="shortcut icon" href="digital-clock-icon.png" type="image/png">
 
     <title>Digital-Clock</title>
+
 </head>
+
 <body>
 
+    <div class="clock">
+
+        <div class="display"></div>
+
+    </div>
+
     <script src="javascript.js"></script>
+
 </body>
+
 </html>
