Added a button to set random colors

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                     <input id="rangeBlue" type="range" min="0" max="255" value="255">
                 </div>
 
+                <div>
+                    <button id="randomColor">Random Color!</button>
+                </div>
+
             </div>
 
         </section>
